# rebis-pip

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
examples/: hello.rebis  todo_python.md
src/rebis/: __init__.py  __main__.py  ast.py  errors.py  interpreter.py  parser.py  pretty.py  repl.py  resolver.py  tokenizer.py
tests/: test_parser.py  test_repl.py
